add some feature community